# file-handler-C

./: Makefile.in  config.h.in  configure  configure.ac
.github/workflows/: makefile.yml
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
include/: file.h
src/: Makefile.am  Makefile.in  file.c
tests/: Makefile.am  Makefile.in  check_file.c
